Fix: Logo alignment.

--- a/_sass/abc.scss
+++ b/_sass/abc.scss
@@ -11,6 +11,8 @@
 }
 
 .column {
+    display: flex;
+    align-items: center;
     flex: 33.33%;
     padding: 5px;
 }
